manifests/validating.config.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "example-webhook.acme.com"
webhooks:
  - name: "example-webhook.acme.com"
    rules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        operations: ["CREATE"]
        resources: ["pods"]
        scope: "*"
      - apiGroups: [ "" ]
        apiVersions: [ "v1" ]
        operations: [ "UPDATE" ]
        resources: [ "resourcequotas" ]
        scope: "*"
    clientConfig:
      service:
        namespace: default
        name: example-webhook
        path: /validate-pods
        port: 443
      caBundle: "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURkRENDQWx5Z0F3SUJBZ0lVVnA3Q0FQZ2VLcmU5OUNoeVh3emk4SVN6VFA0d0RRWUpLb1pJaHZjTkFRRUwKQlFBd1VqRUxNQWtHQTFVRUJoTUNRVlV4RURBT0JnTlZCQWdUQjBWNFlXMXdiR1V4RWpBUUJnTlZCQWNUQ1UxbApiR0p2ZFhKdVpURVFNQTRHQTFVRUNoTUhSWGhoYlhCc1pURUxNQWtHQTFVRUN4TUNRMEV3SGhjTk1qTXdORE13Ck1EY3hOREF3V2hjTk1qZ3dOREk0TURjeE5EQXdXakJTTVFzd0NRWURWUVFHRXdKQlZURVFNQTRHQTFVRUNCTUgKUlhoaGJYQnNaVEVTTUJBR0ExVUVCeE1KVFdWc1ltOTFjbTVsTVJBd0RnWURWUVFLRXdkRmVHRnRjR3hsTVFzdwpDUVlEVlFRTEV [...]
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 2
